# nih-plug-webview

./: .gitmodules  Cargo.toml
.cargo/: config
frontend/: index.html  package.json
plugin/: Cargo.toml  bundler.toml
plugin/src/: lib.rs
standalone/: Cargo.toml
standalone/src/: main.rs
