[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nih_plug = { path = "../nih-plug", features = ["standalone"] }
nih_plug_webview = { path = "../nih-plug/nih_plug_webview" }
rand = "0.8.5"

[lib]
crate-type = ["cdylib", "lib"]
